tests/datacon/neg/Data00.hs
module Data00 where

import Data00Lib 

test2 :: Int -> Thing 
test2 = Thing 
